Bug 1265750 - Some word cannot be selected via long pressing, r=TYLin, mats